# ML_Module6

./: .gitignore  README.md
text_normalization_project/: pyproject.toml
text_normalization_project/notebooks/: Natural_Language_Processing_and_Triton_Inference_Servers.ipynb
text_normalization_project/notebooks/.ipynb_checkpoints/: Module_1-checkpoint.ipynb
