[project]
name = "text-normalization-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry",email = "50521864+ItProgrammist@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.51.3,<5.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "wandb (>=0.19.10,<0.20.0)"
]

[tool.poetry]
packages = [{include = "text_normalization_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
